<resources>
    <string name="app_name">makeee</string>
    <string name="lgn_email">Email : </string>
    <string name="lgn_password">Password :</string>
    <string name="lgn_btn_sign_in">Sign-in</string>
    <string name="lgn_btn_sign_up"><u>Sign-up</u></string>
    <string name="background">background</string>
    <string name="are_you_new_here">Are you new here ?</string>
    <string name="logo">logo</string>
    <string name="confirm_password">Confirm password :</string>
    <string name="alredy_a_member">Alredy a member ?</string>
    <string-array name="provinces">
        <item>Antananarivo</item>
        <item>Toamasina</item>
        <item>Fianarantsoa</item>
        <item>Mahajanga</item>
        <item>Toliara</item>
        <item>Antsiranana</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_user_main">UserMainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_main_screen">MainScreenActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_preferences">Preferences</string>
    <string name="title_search">Search</string>
    <string name="title_explore">Explore</string>
    <string name="switch_theme">Switch theme</string>
    <string name="name">Name</string>
    <string name="province_desctiption">Province desctiption</string>
    <string name="province_title">Province title</string>
</resources>