<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.aceky.makeee.view.screens.auth.SignUpViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primary"
        tools:context=".view.screens.auth.SignUpActivity">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="412dp"
            android:layout_height="177dp"
            android:contentDescription="@string/background"
            android:scaleType="centerCrop"
            android:src="@drawable/makeee_dev"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            app:errorColor="@{viewModel.showError}"
            android:id="@+id/editTextTextEmailAddress"
            android:layout_width="346dp"
            android:layout_height="48dp"
            android:backgroundTint="@color/secondary"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:labelFor="@id/textView3"
            android:textColor="@color/secondary"
            android:textColorHighlight="@color/secondary"
            android:textColorHint="@color/secondary"
            android:textColorLink="@color/secondary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.523"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            android:autofillHints="" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/lgn_email"
            android:textColor="@color/secondary"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.101"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView4" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/lgn_password"
            android:textColor="@color/secondary"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.116"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress" />

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="346dp"
            android:layout_height="48dp"
            android:backgroundTint="@color/secondary"
            android:ems="10"
            android:inputType="textPassword"
            android:textColor="@color/secondary"
            android:textColorHighlight="@color/secondary"
            android:textColorHint="@color/secondary"
            android:textColorLink="@color/secondary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.523"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"
            app:srcCompat="@drawable/logo"
            android:contentDescription="@string/logo" />

        <Button
            android:id="@+id/btn_sign_up_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:backgroundTint="@color/secondary"
            android:text="@string/lgn_btn_sign_up"
            android:textColor="@color/primary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextConfirmPassword" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="32dp"
            android:text="@string/alredy_a_member"
            android:textColor="@color/secondary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_sign_up_submit" />
        <EditText
            android:id="@+id/editTextTextConfirmPassword"
            android:layout_width="346dp"
            android:layout_height="48dp"
            android:backgroundTint="@color/secondary"
            android:ems="10"
            android:inputType="textPassword"
            android:textColor="@color/secondary"
            android:textColorHighlight="@color/secondary"
            android:textColorHint="@color/secondary"
            android:textColorLink="@color/secondary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.523"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />
        <TextView
            android:id="@+id/btn_go_back_sing_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="100dp"
            android:shadowColor="@color/black"
            android:text="@string/lgn_btn_sign_in"
            android:textColor="@color/secondary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.634"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/btn_sign_up_submit" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/confirm_password"
            android:textColor="@color/secondary"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.167"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />



    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
